[gd_scene load_steps=16 format=3 uid="uid://cagka4k0eskfi"]

[ext_resource type="Script" uid="uid://ds6v28bagkc5a" path="res://addons/icosa-gallery/thumbnail.gd" id="1_trr3q"]
[ext_resource type="Texture2D" uid="uid://b7qrs5qju2ois" path="res://addons/icosa/icons/download.svg" id="2_0msik"]
[ext_resource type="Script" uid="uid://cm4iu7i07qryo" path="res://addons/icosa/misc/description_urls.gd" id="2_hjirf"]
[ext_resource type="Script" uid="uid://banbdiengwmgk" path="res://addons/icosa/misc/throbber.gd" id="3_3qkbe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8oa6n"]

[sub_resource type="FontVariation" id="FontVariation_3qkbe"]

[sub_resource type="Gradient" id="Gradient_hjirf"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.308167, 0.4815, 0.5515)
colors = PackedColorArray(0.392157, 0.392157, 0.392157, 0, 0.391317, 0.391317, 0.391317, 1, 0.392157, 0.392157, 0.392157, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8oa6n"]
gradient = SubResource("Gradient_hjirf")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.9, 0.1)
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_dytcp"]
offsets = PackedFloat32Array(0.3015, 0.434833, 0.558167)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_e2td2"]
gradient = SubResource("Gradient_dytcp")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.9, 0.1)
metadata/_snap_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hjirf"]
bg_color = Color(0.148922, 0.574047, 0.258045, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3qkbe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hjirf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8oa6n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dytcp"]

[node name="Thumbnail" type="Button"]
clip_contents = true
offset_left = 4.0
offset_top = 4.0
offset_right = 246.0
offset_bottom = 246.0
script = ExtResource("1_trr3q")

[node name="Padding" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Info" type="VBoxContainer" parent="Padding"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="Description" type="RichTextLabel" parent="Padding/Info"]
unique_name_in_owner = true
visible = false
layout_mode = 2
focus_mode = 2
text = "Description"
fit_content = true
scroll_active = false
context_menu_enabled = true
selection_enabled = true
script = ExtResource("2_hjirf")

[node name="PanelContainer" type="PanelContainer" parent="Padding/Info"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_8oa6n")

[node name="PanelContainer2" type="PanelContainer" parent="Padding/Info/PanelContainer"]
clip_children = 1
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="ThumbnailImage" type="TextureRect" parent="Padding/Info/PanelContainer/PanelContainer2"]
unique_name_in_owner = true
z_index = 2
z_as_relative = false
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
expand_mode = 1

[node name="Asset" type="HBoxContainer" parent="Padding/Info"]
layout_mode = 2

[node name="AssetName" type="Label" parent="Padding/Info/Asset"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "AssetName"
vertical_alignment = 2

[node name="AuthorName" type="Label" parent="Padding/Info"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 11
text = "AuthorName"
horizontal_alignment = 2

[node name="Details" type="HBoxContainer" parent="Padding/Info"]
layout_mode = 2

[node name="License" type="Label" parent="Padding/Info/Details"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 9
text = "License"
vertical_alignment = 2

[node name="Formats" type="MenuButton" parent="Padding/Info/Details"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 14
icon = ExtResource("2_0msik")
alignment = 0
icon_alignment = 2

[node name="DownloadFinished" type="Label" parent="Padding/Info/Details"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_3qkbe")
theme_override_font_sizes/font_size = 18
text = "✔️"
vertical_alignment = 1

[node name="DownloadFailed" type="Label" parent="Padding/Info/Details"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_3qkbe")
theme_override_font_sizes/font_size = 18
text = "❌"
vertical_alignment = 1

[node name="Progress" type="HBoxContainer" parent="Padding/Info"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="BufferingIcon" type="TextureProgressBar" parent="Padding/Info/Progress"]
unique_name_in_owner = true
layout_mode = 2
max_value = 33.0
value = 3.0
fill_mode = 4
texture_under = SubResource("GradientTexture2D_8oa6n")
texture_progress = SubResource("GradientTexture2D_e2td2")
script = ExtResource("3_3qkbe")

[node name="VBoxContainer" type="VBoxContainer" parent="Padding/Info/Progress"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DownloadProgress" type="ProgressBar" parent="Padding/Info/Progress/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_hjirf")
show_percentage = false

[node name="FilesDownloaded" type="ProgressBar" parent="Padding/Info/Progress/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
show_percentage = false

[node name="ProgressLabel" type="Label" parent="Padding/Info/Progress/VBoxContainer/FilesDownloaded"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="Close" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -9.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_3qkbe")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hjirf")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8oa6n")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dytcp")
text = "x"

[connection signal="pressed" from="." to="." method="_on_pressed"]
